tests/test187.rael.exp
Error [tests/test187.rael:1:21]: Expected a string
| log "rael":contains(0 to 3)
|                     ^
