tests/test187.rael
log "rael":contains(0 to 3)
